--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,23 +1,17 @@
 #items
 
 item.serilia-iridium.name = Iridium
-item.serilia-iridium.description = Used in all types of basic buildings and ammo crafting.
-item.serilia-vanadinite.name = Vanadinite
-item.serilia-vanadinite.description = Used in most heat related buildings and liquid storage.
+item.serilia-iridium.description = Used in all types of basic structures and rudimentary burner tech.
 item.serilia-fragisteel.name = Fragisteel
-item.serilia-fragisteel.description = Used as flak ammo and insulative. Brittle.
+item.serilia-fragisteel.description = Used in all sorts of thermal tech and as flak ammo. Brittle.
 item.serilia-tarnide.name = Tarnide
-item.serilia-tarnide.description = Used in all types of advanced transport and storage blocks.
-item.serilia-leticen.name = Leticen
-item.serilia-leticen.description = Used in all types of power related buildings. Highly charged.
-item.serilia-azulite.name = Azulite
-item.serilia-azulite.description = Used in most defensive buildings and advanced drills. Highly resistant.
-item.serilia-arsenic-dust.name = Arsenic Dust
-item.serilia-arsenic-dust.description = Used in production of other refined materials and chlorine synthesizing.
+item.serilia-tarnide.description = Used in all sorts of advanced transport tech as well as storage and payload-related blocks.
+item.serilia-galvanium.name = Galvanium
+item.serilia-galvanium.description = Used in all types of power related buildings. Highly charged.
+item.serilia-chirokyn.name = Chirokyn
+item.serilia-chirokyn.description = Used as main building material for bulk tech and advanced weaponry. Extremely durable.
 item.serilia-paragonite.name = Paragonite
 item.serilia-paragonite.description = Used as main building material on laser tech and advanced structures.
-item.serilia-uranium.name = Uranium
-item.serilia-uranium.description = Used in nuclear tech and as heavy ammo.
 
 #liquids
 
@@ -31,8 +25,29 @@ liquid.serilia-chlorine.description = Used in most chemical reactions and heat r
 unit.serilia-scion.name = Scion
 unit.serilia-scion.description = Defends the Sprout core by building and shooting down small enemies.
 
-#core blocks
+#turrets
 
+#drills
+block.serilia-methane-extractor.name = Methane Extractor
+block.serilia-methane-extractor.description = Extracts methane from vents.
+block.serilia-heat-drill.name = Heat Drill
+block.serilia-heat-drill.description = When placed on an ore, outputs items in bursts indefinitely. Requires methane.
+
+#transport
+
+#liquid-transport
+
+#power
+
+#defense
+
+#crafters
+block.serilia-fragisteel-press.name = Fragisteel Press
+block.serilia-fragisteel-press.description = Compresses iridium into brittle plates of fragisteel.
+
+#unit-blocks
+
+#effect
 block.serilia-core-sprout.name = Core: Sprout
 block.serilia-core-sprout.description = Core of the base. Once destroyed, the sector is lost. Armored.
 block.serilia-core-sprout.details = The first iteration.
