--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -53,3 +53,6 @@ block.serilia-core-sprout.description = Core of the base. Once destroyed, the se
 block.serilia-core-sprout.details = The first iteration.
 block.serilia-core-burgeon.name = Core: Burgeon
 block.serilia-core-burgeon.description = An upgrade of the Sprout core capable of storing more items. Armored.
+
+#ui
+bar.carrydist = Remaining: {0}
