--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,33 @@
-org.gradle.jvmargs=--illegal-access=permit \
---add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
---add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED
+# EntityAnno version.
 entVersion = v143.1
+# Mindustry version, should follow what EntityAnno uses.
+mindustryVersion = v143.1
+# Arc version, should follow what EntityAnno uses.
+arcVersion = v143.1
+
+# Android SDK version.
+sdkVersion = 30
+# Minimum Android API version.
+sdkAPI = 14
+
+# Enable parallel compilation.
+org.gradle.parallel = true
+# Necessary internal API access for EntityAnno.
+org.gradle.jvmargs = \
+--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
+--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED
+
+# Compile avoidance (see https://kotlinlang.org/docs/kapt.html#compile-avoidance-for-kapt-since-1-3-20).
+kapt.include.compile.classpath = false
+# Avoid unnecessary bloat.
+kotlin.stdlib.default.dependency = false
