--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -65,3 +65,4 @@ block.serilia-core-burgeon.description = An upgrade of the Sprout core capable o
 #ui
 bar.carrydist = Remaining: {0}
 bar.nomotor = Motor Required
+bar.laser = Laser:
