--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -42,6 +42,8 @@ block.serilia-conveyor-tube-splitter.name = Conveyor Tube Splitter
 block.serilia-conveyor-tube-splitter.description = Distributes items to other tube blocks that can move them. Will distribute to buildings once 2 motors are connected. Does not accept items from buildings.
 block.serilia-conveyor-tube-bridge.name = Conveyor Tube Bridge
 block.serilia-conveyor-tube-bridge.description = Transports items over buildings and terrain when connected to tube motors. Requires a motor to reach both sides to function. The output distributes items to other tube blocks that can move them. The output will distribute to buildings once 2 motors are connected.
+block.serilia-heavy-duct.name = Heavy Duct
+block.serilia-heavy-duct.description = Moves items forward, only accepts items from duct nodes. Heavily armored.
 
 #liquid-transport
 
