doing some mischief

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -43,9 +43,9 @@ block.serilia-conveyor-tube-splitter.description = Distributes items to other tu
 block.serilia-conveyor-tube-bridge.name = Conveyor Tube Bridge
 block.serilia-conveyor-tube-bridge.description = Transports items over buildings and terrain when connected to tube motors. Requires a motor to reach both sides to function. The output distributes items to other tube blocks that can move them. The output will distribute to buildings once 2 motors are connected.
 block.serilia-heavy-duct.name = Heavy Duct
-block.serilia-heavy-duct.description = Moves items forward, only accepts items from duct nodes. Heavily armored.
+block.serilia-heavy-duct.description = Moves items forward in a straight line, only accepts items from duct nodes. Heavily armored.
 
-#liquid-transport
+#liquid-transportcv
 
 #power
 
