--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -30,8 +30,8 @@ unit.serilia-scion.description = Defends the Sprout core by building and shootin
 #drills
 block.serilia-methane-extractor.name = Methane Extractor
 block.serilia-methane-extractor.description = Extracts methane from vents.
-block.serilia-heat-drill.name = Heat Drill
-block.serilia-heat-drill.description = When placed on an ore, outputs items in bursts indefinitely. Requires methane.
+block.serilia-combustion-drill.name = Combustion Drill
+block.serilia-combustion-drill.description = When placed on an ore, outputs items in bursts indefinitely. Requires methane.
 
 #transport
 block.serilia-powered-conveyor-tube.name = Powered Conveyor Tube
@@ -44,6 +44,8 @@ block.serilia-conveyor-tube-bridge.name = Conveyor Tube Bridge
 block.serilia-conveyor-tube-bridge.description = Transports items over buildings and terrain when connected to tube motors. Requires a motor to reach both sides to function. The output distributes items to other tube blocks that can move them. The output will distribute to buildings once 2 motors are connected.
 block.serilia-heavy-duct.name = Heavy Duct
 block.serilia-heavy-duct.description = Moves items forward in a straight line, only accepts items from duct nodes. Heavily armored.
+block.serilia-duct-node.name = Duct Node
+block.serilia-duct-node.description = Redirects input items to the direction its facing. Used to insert items into Heavy Ducts.
 
 #liquid-transportcv
 
