bundle and stuff

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -45,7 +45,7 @@ block.serilia-conveyor-tube-bridge.description = Transports items over buildings
 block.serilia-heavy-duct.name = Heavy Duct
 block.serilia-heavy-duct.description = Moves items forward in a straight line, only accepts items from duct nodes. Heavily armored.
 block.serilia-duct-node.name = Duct Node
-block.serilia-duct-node.description = Redirects input items to the direction its facing. Used to insert items into Heavy Ducts.
+block.serilia-duct-node.description = Redirects input items to the direction its facing. Used to insert items into Heavy Ducts. May not be chained.
 
 #liquid-transportcv
 
