--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -5,7 +5,7 @@ item.serilia-iridium.description = Used in all types of basic structures and rud
 item.serilia-fragisteel.name = Fragisteel
 item.serilia-fragisteel.description = Used in all sorts of thermal tech and as flak ammo. Brittle.
 item.serilia-tarnide.name = Tarnide
-item.serilia-tarnide.description = Used in all sorts of advanced transport tech as well as storage and payload-related blocks.
+item.serilia-tarnide.description = Used in all sorts of advanced transport tech as well as storage and payload related blocks.
 item.serilia-galvanium.name = Galvanium
 item.serilia-galvanium.description = Used in all types of power related buildings. Highly charged.
 item.serilia-chirokyn.name = Chirokyn
@@ -46,6 +46,10 @@ block.serilia-heavy-duct.name = Heavy Duct
 block.serilia-heavy-duct.description = Moves items forward in a straight line, only accepts items from duct nodes. Heavily armored.
 block.serilia-duct-node.name = Duct Node
 block.serilia-duct-node.description = Redirects input items to the direction its facing. Used to insert items into Heavy Ducts. May not be chained.
+block.serilia-duct-junction.name = Duct Junction
+block.serilia-duct-junction.description = Acts as a bridge for two crossing ducts.
+block.serilia-heavy-duct-router.name = Heavy Duct Router
+block.serilia-heavy-duct-router.description = Distributes items equally across three directions.
 
 #liquid-transportcv
 
@@ -54,8 +58,10 @@ block.serilia-duct-node.description = Redirects input items to the direction its
 #defense
 
 #crafters
-block.serilia-fragisteel-press.name = Fragisteel Press
-block.serilia-fragisteel-press.description = Compresses iridium into brittle plates of fragisteel.
+block.serilia-fragisteel-smelter.name = Fragisteel Smelter
+block.serilia-fragisteel-smelter.description = Smelts iridium into brittle plates of fragisteel. Requires methane to work.
+block.serilia-galvanium-printer.name = Galvanium Printer
+block.serilia-galvanium-printer.description = Prints galvanium rods using sand and iridium. Requires methane to work.
 
 #unit-blocks
 
