--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -26,6 +26,10 @@ unit.serilia-scion.name = Scion
 unit.serilia-scion.description = Defends the Sprout core by building and shooting down small enemies.
 
 #turrets
+block.serilia-quail.name = Quail
+block.serilia-quail.description = Fires bolts of energy at enemy aircraft.
+block.serilia-scourge.name = Scourge
+block.serilia-scourge.description = Fires long range missiles at ground units.
 
 #drills
 block.serilia-methane-extractor.name = Methane Extractor
@@ -48,8 +52,8 @@ block.serilia-duct-node.name = Duct Node
 block.serilia-duct-node.description = Redirects input items to the direction its facing. Used to insert items into Heavy Ducts. May not be chained.
 block.serilia-duct-junction.name = Duct Junction
 block.serilia-duct-junction.description = Acts as a bridge for two crossing ducts.
-block.serilia-heavy-duct-router.name = Heavy Duct Router
-block.serilia-heavy-duct-router.description = Distributes items equally across three directions.
+block.serilia-duct-distributor.name = Duct Distributor
+block.serilia-duct-distributor.description = Distributes items equally across seven directions.
 
 #liquid-transportcv
 
@@ -73,3 +77,12 @@ block.serilia-core-burgeon.name = Core: Burgeon
 block.serilia-core-burgeon.description = An upgrade of the Sprout core capable of storing more items. Armored.
 
 #ui
+bar.pumpProgress = Pump Progress
+
+#enemies
+unit.serilia-scout.name = Scout
+unit.serilia-tier-1-mech.name = Tier 1 Mech
+unit.serilia-tier-2-aircraft.name = Tier 2 Aircraft
+
+#caliterra map bundles
+announce.siege = [red]\u26A0 WARNING \u26A0\n!! INBOUND SIEGE !!
