--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -86,3 +86,7 @@ unit.serilia-tier-2-aircraft.name = Tier 2 Aircraft
 
 #caliterra map bundles
 announce.siege = [red]\u26A0 WARNING \u26A0\n!! INBOUND SIEGE !!
+
+#recipes
+recipe.serilia-wall-to-locus.name = Rapid Assembly
+recipe.serilia-wall-to-locus.description = argaghrgaragarrgaargghgrrgargrgarg ang ang amhulimgg dzand gza vzadvavdvvdta  vdt atd  dtavd
