moved everything to unicrafter folder, split ui into nice functions

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -90,3 +90,4 @@ announce.siege = [red]\u26A0 WARNING \u26A0\n!! INBOUND SIEGE !!
 #recipes
 recipe.serilia-wall-to-locus.name = Rapid Assembly
 recipe.serilia-wall-to-locus.description = argaghrgaragarrgaargghgrrgargrgarg ang ang amhulimgg dzand gza vzadvavdvvdta  vdt atd  dtavd
+recipe.serilia-wall-to-tanks.name = Recipe: Randomized Assembly
